code/tui/snapshots/fullscreen/modal/project_worktree_deleted_fullscreen.snap
---
source: code/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
  .                                                                                    [Dashboard]  
                                                                                                    
                                                                                                    
            ┌── Project worktrees ────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Search worktrees                                                   │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  Worktree deleted.                                                      │             
            │  New worktree  ·  Create at HEAD · no session                           │             
            │> repo  ·  Current · main · /repo                                        │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
  ──────────│  n New worktree · d delete · / search · Esc close                       │───────────  
  > Build an└─────────────────────────────────────────────────────────────────────────┘             
  ─────────────────────────────────────────────────────────────────────────────── Automatic model
