code/tui/snapshots/fullscreen/modal/provider_clicked_input.snap
---
source: code/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
  .                                                                                    [Dashboard]  
                                                                                                    
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮  
  │         ┌── Config › Custom provider ─────────────────────────────────────────[✗]─┐          │  
  │    ▄  ▄ │                                                                         │          │  
  │  ▗█▛██▜█│> Provider name                                                          │          │  
  │  ▝▜████▛│  ╭────────────────────────────────────────────────────────────────────╮ │          │  
  │    ▝  ▘ │  │ N                                                                  │ │          │  
  │         │  ╰────────────────────────────────────────────────────────────────────╯ │          │  
  │         │  Base URL                                                               │          │  
  │         │  ╭────────────────────────────────────────────────────────────────────╮ │          │  
  │         │  │ https://example.com/v1                                             │ │          │  
  │         │  ╰────────────────────────────────────────────────────────────────────╯ │          │  
  │         │  API key                                                                │          │  
  ╰─────────│  ╭────────────────────────────────────────────────────────────────────╮ │──────────╯  
            │  │ API key (optional)                                                 │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  Model ID                                                               │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Leave empty to use the selected built-in model                     │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  API type                                              OpenAI Responses │             
            │  Model context window                                              272k │             
            │● Test                                                                   │             
            │                                                                         │             
  ──────────└─────────────────────────────────────────────────────────────────────────┘───────────  
  > Build anything                                                                                  
  ─────────────────────────────────────────────────────────────────────────────── Automatic model   
                                                                                                    
  Enter to save  ·  Esc to cancel
