code/tui/snapshots/fullscreen/modal/settings_on_home.snap
---
source: code/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
  .                                                                                    [Dashboard]  
                                                                                                    
                                                                                                    
            ┌── Config ───────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   General    Providers    Issues    Network                             │             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Search configuration                                               │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │> Vim mode                                                         off   │             
            │  Show tips                                                         on   │             
            │  Memory diagnostics                                               off + │             
            │  Automatic updates                                             Latest   │             
            │  Show Git changes as diff                                         off + │             
            │  Language                                                     English   │             
            │  Status bar style                                              Simple   │             
            │  Key hint style                                              Contrast   │             
            │  Screen mode                                               fullscreen   │             
            │  Memories                                                         off + │             
            │  Automatic Git fetch                                              Off + │             
            │  Git fetch interval                                              180s   │             
            │  Git branch marker                                          Powerline   │             
            │  Advisor                                                          Off   │             
            │  2 more below                                                           │             
  ──────────│  Enter change · r reset · Tab tabs · / search · Esc close               │───────────  
  > preserve└─────────────────────────────────────────────────────────────────────────┘             
  ─────────────────────────────────────────────────────────────────────────────── Automatic model
