code/tui/snapshots/fullscreen/modal/short_modal_page_hintline.snap
---
source: code/tui/src/app/fullscreen/modal_tests.rs
expression: text
---
┌── Config ────[✗]─┐
│                  │
└──────────────────┘
  Esc close
