code/tui/snapshots/fullscreen/modal/status_modal_processes.snap
---
source: code/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
  .                                                                                    [Dashboard]  
                                                                                                    
                                                                                                    
            ┌── Status ───────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   Thread    Processes                                                   │             
            │                                                                         │             
            │  Total:              collecting                                         │             
            │  TUI:                collecting                                         │             
            │  App Server:         included in the TUI process                        │             
            │  Memory diagnostics: Disabled                                           │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
  ──────────└─────────────────────────────────────────────────────────────────────────┘───────────  
  > Build anything                                                                                  
  ─────────────────────────────────────────────────────────────────────────────── Automatic model   
                                                                                                    
  Tab to switch · Esc to close
